Update bootstrap, fix ymd-timestamp not collapsing

--- a/src/css/diff-container.css
+++ b/src/css/diff-container.css
@@ -20,10 +20,17 @@ blue-diff-footer{
     background-color: #1d9efd;
 }
 
+.align-items-center > .col-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #timestamp-select-left, #timestamp-select-right,
 #year-select-left, #year-select-right,
 #month-select-right, #month-select-left{
     width: auto;
+    padding-left: 1px;
+    padding-right: 1px;
 }
 
 #explanation-middle{
